--- a/DAR-Patterns in data.Rmd
+++ b/DAR-Patterns in data.Rmd
@@ -46,8 +46,8 @@ Our Research Question is:
 ## Graphical Results
 <!--Your graph should have a good title, and axes should be labled as needed.  Discuss your graphical results, showing how they answer the research question.  Use specific features of the graph in your discussion.!-->
 ```{r}
-myex <- ggplot(pushups,aes(x=position,y=weight))
-myex + geom_boxplot()
+a <- ggplot(pushups,aes(x=position,y=pushups))
+a + geom_boxplot()
 ```
 
 
@@ -55,6 +55,11 @@ The plot reveals that line players all weigh more than all but the heaviest kill
 
 ## Numerical Results
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+favstats(pushups~position,data=pushups)
+```
+
 
 
 # Inferential Results
