--- a/DAR-Patterns in data.Rmd
+++ b/DAR-Patterns in data.Rmd
@@ -54,6 +54,12 @@ Our Research Question is:
 # Inferential Results
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+We are testing to see if skill players do more pushups than line players. 
+```{r}
+t.test(pushups~position,data=pushups)
+```
+
+The mean for the line player group is 17.13 while the mean for the skill player group is 49.72, having a confidence interval of (-44.91,-20.3).
 
 # Discussion and Conclusion
 <!--State your overall conclusion.  This is also a good place to mention other Research Questions that came to mind as you were carrying out this study.!-->
